WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
230567
[Mac Catalyst] Fix build issue
https://bugs.webkit.org/show_bug.cgi?id=230567
Summary
[Mac Catalyst] Fix build issue
Per Arne Vollan
Reported
2021-09-21 11:07:20 PDT
The identifier kLSDefaultSessionID is undeclared.
Attachments
Patch
(1.17 KB, patch)
2021-09-21 11:10 PDT
,
Per Arne Vollan
no flags
Details
Formatted Diff
Diff
Patch
(1.66 KB, patch)
2021-09-21 11:41 PDT
,
Per Arne Vollan
no flags
Details
Formatted Diff
Diff
Patch
(1.64 KB, patch)
2021-09-21 13:51 PDT
,
Per Arne Vollan
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Per Arne Vollan
Comment 1
2021-09-21 11:07:37 PDT
<
rdar://83314629
>
Per Arne Vollan
Comment 2
2021-09-21 11:10:03 PDT
Created
attachment 438838
[details]
Patch
Per Arne Vollan
Comment 3
2021-09-21 11:41:32 PDT
Created
attachment 438843
[details]
Patch
Brent Fulgham
Comment 4
2021-09-21 11:47:20 PDT
Comment on
attachment 438843
[details]
Patch r=me
Per Arne Vollan
Comment 5
2021-09-21 11:49:05 PDT
Comment on
attachment 438843
[details]
Patch Thanks for reviewing!
EWS
Comment 6
2021-09-21 12:32:24 PDT
Committed
r282835
(
241966@main
): <
https://commits.webkit.org/241966@main
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 438843
[details]
.
Per Arne Vollan
Comment 7
2021-09-21 13:51:42 PDT
Reopening to attach new patch.
Per Arne Vollan
Comment 8
2021-09-21 13:51:43 PDT
Created
attachment 438854
[details]
Patch
EWS
Comment 9
2021-09-21 14:29:38 PDT
Committed
r282842
(
241973@main
): <
https://commits.webkit.org/241973@main
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 438854
[details]
.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug