[Mac Catalyst] Fix build issue https://bugs.webkit.org/show_bug.cgi?id=230567 <rdar://83314629>

Reviewed by Brent Fulgham.

The identifier kLSDefaultSessionID is undeclared. Declare it for the internal build on Catalyst.

* pal/spi/cocoa/LaunchServicesSPI.h:


Canonical link: https://commits.webkit.org/241966@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@282835 268f45cc-cd09-0410-ab3c-d52691b4dbfc